tests/neg/varargsInMethodsT1625/classConstructorVarArgs.scala
class Abc(val x: String*, val c: String*) {
  def test = ???
}